<resources>
    <string name="app_name">Market2U</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="mobileNum">Mobile Number</string>
    <string name="billOtherAddress">Bill to a different address</string>
    <string name="billAddress">Billing Address</string>
    <string name="shippingDetails">Shipping Details</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="web_search">Web search</string>
    <string name="homeTitle">Home</string>
    <string name="accountTitle">My Account</string>
    <string name="orderTitle">My Order</string>
    <string name="cartTitle">Shopping Cart</string>
    <string name="notificationTitle">Notification</string>
    <string name="settingsTitle">Settings</string>
    <string name="addToCart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="review">Reviews &amp; Ratings</string>
    <string name="addReview">Add a review</string>
    <string name="productName">Product Name</string>
    <string name="productDescription">Product Description</string>
    <string name="productRemainingQuantity">Product Quantity</string>
    <string name="productPrice">Price (RM)</string>
    <string name="addProduct">Add Product</string>
    <string name="previewProduct">Preview Product</string>
    <string name="addProductPhoto">Add Photo</string>
    <string name="productImage">Product Image</string>
    <string name="quantityToOrder">Quantity to order</string>
    <string name="makeOrder">Make order</string>

    <string-array name="spinnerProvince">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Melaka</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Pulau Pinang</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Sabah</item>
        <item>Putrajaya</item>
    </string-array>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_product_menu">Market2U</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Testing -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

</resources>
